src/app/components/home/home.component.css
.header-title {
  margin-top: 30px;
}

ul {
  display: flex;
  flex: 1;
  gap: 18px;
  flex-wrap: wrap;
  list-style: none;
  padding: 40px;
}

.poster-container {
  width: 160px;
  height: 0;
  padding-top: 121.47%;
  position: relative;
}

.poster-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 160px;
  height: 250px;
  object-fit: cover;
  border-radius: 4px;
}

.add-button-container {
  background-color: black;
}

h2 {
  text-align: center;
  margin-bottom: 20px;
}

.movie-info {
  display: flex;
  justify-content: center;
  align-items: center;
}

.movie-title {
  padding-top: 20px;
  text-align: center;
}

.next-button {
  display: flex;
  justify-content: center;
}

.tmdb-api-credits {
  display: flex;
  margin-top: 50px;
}

.tmdb-logo {
  width: 200px;
}

.search-form-container {
  margin-top: 30px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  flex-wrap: wrap;
  align-items: center;
}

.search-form-field {
  margin: 0 18px;
  width: 200px;
}

.search-button {
  margin-left: 18px;
  margin-right: 18px;
  margin-top: -20px;
}

.no-results-container {
  display: flex;
  justify-content: center;
  border-radius: 4px;
  padding: 40px 0;
}

.no-results-container img {
  width: 230px;
  border-radius: 4px;
}

.poster-container.selected .poster-image,
.add-button-container[disabled] {
  opacity: 0.5;
}

.add-button-container[disabled] {
  pointer-events: none;
  color: gray;
}

